Commit al master del blog

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,14 @@
     <title>Blog</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
-<body>
-    <h1>Bienvenidos al blog</h1>
-    <p> primer parrafo del blog</p>
-</body>
+
+    <body>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el tituloatractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las
+                cosas increéibles que se pueden hacer con ramas </p>
+            </div>
+        </div>
+    </body>
 </html>
