Cabecera finalizada con diseño rojo

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,10 @@
     <body>
         <div id="container">
             <div id="cabecera">
-              Cabecera
+              HyperBlog 
+              <span id="tagline">
+                Un blog de confianza
+              </span>
             </div>
             <div id="post">
                 <h1>Este es el tituloatractivo e interesante del post</h1>
