--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,11 @@
                 <h1>Este es el tituloatractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las
                 cosas increéibles que se pueden hacer con ramas </p>
+                <p>
+                    Los blogs son la mejor forma de compartir información y tus ideas.
+                    Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres
+                    un rockstar. Pero estadisticamente no lo eres . por ahora.    
+                </p>
             </div>
         </div>
     </body>
