Cambio cabecera y color del texto

--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
             <div id="cabecera">
               HyperBlog 
               <span id="tagline">
-                Un blog de confianza
+                Un blog de cabecera 
               </span>
             </div>
             <div id="post">
