Agregue suscipción, cambio cabecera y letra azul

--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
             <div id="cabecera">
               HyperBlog 
               <span id="tagline">
-                Un blog de confianza
+                Un blog maestro
               </span>
             </div>
             <div id="post">
@@ -26,6 +26,7 @@
                     Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres
                     un rockstar. Pero estadisticamente no lo eres . por ahora.    
                 </p>
+                <p>Like y suscribete</p>
             </div>
         </div>
     </body>
