Color fondo, logo nuevo y mejor color header

--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/icono.png"/>
               HyperBlog 
               <span id="tagline">
                 Un blog de cabecera 
