--- a/blog.html
+++ b/blog.html
@@ -28,6 +28,9 @@
                 </p>
                 <p>Like y suscribete</p>
             </div>
+	    <div id="footer">
+                  Hecho con amor 😺😺
+	    </div>
         </div>
     </body>
 </html>
