Tilde y mensaje de contribución

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
                     Mucho m&aacute;s que ir a conferencias o salir en YouTube. Excepto si eres
                     un rockstar. Pero estadísticamente no lo eres, por ahora.    
                 </p>
-                <p>Like y suscribete</p>
+                <p>Like y suscr&iacute;bete</p>
             </div>
 	    <div id="footer">
                   Hecho con amor 😺😺
