--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,9 @@
                 <h1>Aqu&iacute; inicia la historia de un gran proyecto. </h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las
                 cosas incre&iacute;bles que se pueden hacer con ramas </p>
-                <p> <img src="imagenes/gato.jpg" width="100%" /> </p>
+                <!--<p> <img src="imagenes/gato.jpg" width="100%" /> </p> -->
+                <p> <a href="https://imgur.com/VCOXAMS"><img src="https://i.imgur.com/VCOXAMS.jpg" title="source: imgur.com" width="100%" /></a> </p>
+                
                 <p>
                     Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas.
                     Mucho m&aacute;s que ir a conferencias o salir en YouTube. Excepto si eres
